packages/core/src/components/application-header/application-switch-modal/application-switch-modal.scss
/*
 * SPDX-FileCopyrightText: 2023 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
@use 'mixins/shadow-dom/component';
@use 'mixins/hover';

:host {
  display: block;

  @include component.ix-component;

  .content {
    padding: 2rem;
    padding-right: 0;
  }

  .content-apps {
    display: flex;
    position: relative;
    flex-wrap: wrap;
    justify-content: space-evenly;
    max-height: 50vh;
    margin-right: 0.25rem;
    gap: 1.5rem;
  }

  .loading {
    display: flex;
    flex-direction: row;
    align-items: center;

    ix-spinner {
      margin-right: 1rem;
    }
  }
}

:host {
  .AppEntry {
    all: unset;
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 1rem;
    padding: 0.5rem;
    flex: 1 1 calc(45%);
    cursor: pointer;
    border: 0.0625rem solid transparent;
  }

  .AppEntry.Selected {
    background-color: var(--theme-color-ghost--selected);
    border: var(--theme-dynamic-bdr-1);
  }

  .AppEntry {
    @include hover.ghost-hover-pressed;
  }

  .AppEntry:focus-visible {
    border: 1px solid var(--theme-color-focus-bdr);
  }

  .AppName {
    display: flex;
    flex-direction: column;
  }

  .AppName ix-icon {
    margin-left: 1rem;
  }

  .AppIcon {
    width: 3rem;
    height: 3rem;
    border-radius: 0.25rem;
  }
}

